# routes/index.js
@@ -4,5 +4,6 @@ const router = express.Router();
 
 router.use("/", require("./swagger"));
 router.use("/companies", require("./companies"));
+router.use("/users", require("./users"))
 
 module.exports = router;
