# swagger.json
@@ -7,46 +7,26 @@
   },
   "host": "localhost:8080",
   "basePath": "/",
-  "tags": [
-    {
-      "name": "Home",
-      "description": "API Home Page"
-    },
-    {
-      "name": "Companies",
-      "description": "Hiring companies"
-    },
-    {
-      "name": "User",
-      "description": "Operations about users"
-    },
-    {
-      "name": "Interview",
-      "description": "Interview process"
-    },
-    {
-      "name": "School",
-      "description": "School information"
-    }
+  "schemes": [
+    "http"
   ],
-  "schemes": ["http"],
   "paths": {
     "/api-docs": {
       "get": {
-        "tags": ["Home"],
-        "description": "Get the Swagger API documentation.",
+        "description": "",
         "responses": {
           "default": {
-            "description": "Default response."
+            "description": ""
           }
         }
       }
     },
     "/companies/": {
       "get": {
-        "tags": ["Companies"],
         "description": "",
-        "produces": ["application/json"],
+        "produces": [
+          "application/json"
+        ],
         "responses": {
           "200": {
             "description": "OK"
@@ -57,7 +37,6 @@
         }
       },
       "post": {
-        "tags": ["Companies"],
         "description": "Creating a single company in our database",
         "parameters": [
           {
@@ -66,112 +45,281 @@
             "schema": {
               "type": "object",
               "properties": {
-                "companyName": { "example": "Any Company" },
-                "companyDescription": {
-                  "example": "Any description about the company"
+                "companyName": {
+                  "example": "any"
                 },
-                "industryCategory": { "example": "Technology" },
+                "companyDescription": {
+                  "example": "any"
+                },
+                "industryCategory": {
+                  "example": "any"
+                },
                 "location": {
-                  "type": "object",
-                  "properties": {
-                    "address": { "example": "123 Main St" },
-                    "city": { "example": "New York" },
-                    "state": { "example": "NY" },
-                    "country": { "example": "USA" }
-                  }
+                  "example": "any"
                 },
                 "contactInfo": {
-                  "type": "object",
-                  "properties": {
-                    "firstName": { "example": "John" },
-                    "lastName": { "example": "Doe" },
-                    "email": { "example": "john@example.com" },
-                    "favoriteColor": { "example": "Blue" },
-                    "birthday": { "example": "1990-01-01" }
-                  }
+                  "example": "any"
                 },
-                "websiteURL": { "example": "https://www.example.com" }
+                "websiteURL": {
+                  "example": "any"
+                }
               }
             }
           }
         ],
         "responses": {
-          "201": { "description": "Created" },
-          "400": { "description": "Bad Request" },
-          "500": { "description": "Internal Server Error" }
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
         }
       }
     },
     "/companies/{id}": {
       "get": {
-        "tags": ["Companies"],
         "description": "",
         "parameters": [
-          { "name": "id", "in": "path", "required": true, "type": "string" }
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
         ],
         "responses": {
-          "200": { "description": "OK" },
-          "400": { "description": "Bad Request" },
-          "500": { "description": "Internal Server Error" }
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
         }
       },
       "put": {
-        "tags": ["Companies"],
         "description": "Updating a single company in our database",
         "parameters": [
-          { "name": "id", "in": "path", "required": true, "type": "string" },
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
           {
             "name": "body",
             "in": "body",
             "schema": {
               "type": "object",
               "properties": {
-                "companyName": { "example": "Any Company" },
-                "companyDescription": {
-                  "example": "Any description about the company"
+                "companyName": {
+                  "example": "any"
                 },
-                "industryCategory": { "example": "Technology" },
+                "companyDescription": {
+                  "example": "any"
+                },
+                "industryCategory": {
+                  "example": "any"
+                },
                 "location": {
-                  "type": "object",
-                  "properties": {
-                    "address": { "example": "123 Main St" },
-                    "city": { "example": "New York" },
-                    "state": { "example": "NY" },
-                    "country": { "example": "USA" }
-                  }
+                  "example": "any"
                 },
                 "contactInfo": {
-                  "type": "object",
-                  "properties": {
-                    "firstName": { "example": "John" },
-                    "lastName": { "example": "Doe" },
-                    "email": { "example": "john@example.com" },
-                    "favoriteColor": { "example": "Blue" },
-                    "birthday": { "example": "1990-01-01" }
-                  }
+                  "example": "any"
                 },
-                "websiteURL": { "example": "https://www.example.com" }
+                "websiteURL": {
+                  "example": "any"
+                }
               }
             }
           }
         ],
         "responses": {
-          "204": { "description": "No Content" },
-          "400": { "description": "Bad Request" },
-          "404": { "description": "Not Found" },
-          "500": { "description": "Internal Server Error" }
+          "204": {
+            "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
         }
       },
       "delete": {
-        "tags": ["Companies"],
         "description": "Deleting a single company from our database",
         "parameters": [
-          { "name": "id", "in": "path", "required": true, "type": "string" }
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
         ],
         "responses": {
-          "200": { "description": "OK" },
-          "400": { "description": "Bad Request" },
-          "500": { "description": "Internal Server Error" }
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/users/": {
+      "get": {
+        "description": "",
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "post": {
+        "description": "Creating a single user in our database",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "userFirstName": {
+                  "example": "any"
+                },
+                "userLastName": {
+                  "example": "any"
+                },
+                "userEmail": {
+                  "example": "any"
+                },
+                "userPassword": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/users/{id}": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "put": {
+        "description": "Updating a single user in our database",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "userFirstName": {
+                  "example": "any"
+                },
+                "userLastName": {
+                  "example": "any"
+                },
+                "userEmail": {
+                  "example": "any"
+                },
+                "userPassword": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
+        "description": "Deleting a single user from our database",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
         }
       }
     }
